[gd_scene load_steps=50 format=3 uid="uid://bh5a7fhvftxmm"]

[ext_resource type="Script" path="res://10_BOARD/00_BOOK/Book_symbols/Book_page_behaviour.gd" id="1_oj3kp"]
[ext_resource type="Resource" uid="uid://bnr5ucr2s173m" path="res://10_BOARD/00_BOOK/Book_symbols/Main_Book.tres" id="2_skv6l"]
[ext_resource type="Script" path="res://10_BOARD/00_BOOK/Book_symbols/Idle_position.gd" id="3_1o6ej"]
[ext_resource type="Script" path="res://10_BOARD/00_BOOK/Book_symbols/Open_Choice.gd" id="3_whbe4"]
[ext_resource type="Script" path="res://10_BOARD/On_over_node.tres.gd" id="4_kuj33"]
[ext_resource type="PackedScene" uid="uid://db6k1p6qd826g" path="res://10_BOARD/00_BOOK/Book_symbols/Page/Book_page.tscn" id="5_0380u"]
[ext_resource type="Resource" uid="uid://fbr0i6tyrrjn" path="res://10_BOARD/00_BOOK/Button_data/button_01.tres" id="5_dkdpb"]
[ext_resource type="Script" path="res://10_BOARD/00_BOOK/Button_data/Button_area_set.gd" id="5_njsas"]
[ext_resource type="PackedScene" uid="uid://bs32groi0tedy" path="res://10_BOARD/00_BOOK/Choice_panel/Choice_Panel_root.tscn" id="5_ryh6q"]
[ext_resource type="Resource" uid="uid://m16g4pi641qs" path="res://10_BOARD/00_BOOK/Button_data/button_02.tres" id="6_7arii"]
[ext_resource type="PackedScene" uid="uid://cgb4c1n0bj2at" path="res://12_INVENTORY/Book/Page_flip/page_flip_right.tscn" id="6_ignqh"]
[ext_resource type="Resource" uid="uid://bc0al5v16mi2c" path="res://10_BOARD/00_BOOK/Button_data/button_04.tres" id="7_7o884"]
[ext_resource type="Resource" uid="uid://ccap5kr10wdkg" path="res://10_BOARD/00_BOOK/Button_data/button_03.tres" id="7_74geh"]
[ext_resource type="Material" uid="uid://b5u3d7wosa00d" path="res://05_SHADER_TEST/Board/Flat_with_gradient.tres" id="7_n6d7t"]
[ext_resource type="PackedScene" uid="uid://cgc02cx2l0ndw" path="res://10_BOARD/00_BOOK/Legend/Book_page_signets.tscn" id="8_n2vim"]

[sub_resource type="PlaneMesh" id="PlaneMesh_vkvy6"]

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_ul1nu"]
constant = 1.0

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_3ewes"]
size = Vector2(724.789, 654.559)
expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_ccwpb"]
parameter_name = "Dither_size"
qualifier = 1

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_pr2lv"]
default_input_values = [0, 0.83, 1, 0.0]

[sub_resource type="VisualShaderNodeColorConstant" id="VisualShaderNodeColorConstant_qjd8d"]
constant = Color(0.73, 0.47377, 0.1606, 1)

[sub_resource type="VisualShader" id="VisualShader_pduv4"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded;

global uniform float Dither_size;



void fragment() {
// ColorConstant:7
	vec4 n_out7p0 = vec4(0.730000, 0.473770, 0.160600, 1.000000);


// FloatConstant:3
	float n_out3p0 = 1.000000;


// FloatParameter:5
	float n_out5p0 = Dither_size;


	float n_out4p0;
// Expression:4
	n_out4p0 = 0.0;
	{
		const float DITHER_THRESHOLDS[16] ={
				1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
				13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
				4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
				16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
			};
			
		vec2 uv = FRAGCOORD.xy * n_out5p0;
		int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
		n_out4p0 = n_out3p0 - DITHER_THRESHOLDS[index];
	}


// Step:6
	float n_in6p0 = 0.83000;
	float n_out6p0 = step(n_in6p0, n_out4p0);


// Output:0
	ALBEDO = vec3(n_out7p0.xyz);
	ALPHA = n_out6p0;


}
"
graph_offset = Vector2(-324.067, -87.7248)
flags/unshaded = true
nodes/fragment/0/position = Vector2(580, 220)
nodes/fragment/3/node = SubResource("VisualShaderNodeFloatConstant_ul1nu")
nodes/fragment/3/position = Vector2(-1180, 460)
nodes/fragment/4/node = SubResource("VisualShaderNodeExpression_3ewes")
nodes/fragment/4/position = Vector2(-900, 460)
nodes/fragment/4/size = Vector2(724.789, 654.559)
nodes/fragment/4/input_ports = "0,0,In;1,0,Size;"
nodes/fragment/4/output_ports = "0,0,Dither_Node;"
nodes/fragment/4/expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"
nodes/fragment/5/node = SubResource("VisualShaderNodeFloatParameter_ccwpb")
nodes/fragment/5/position = Vector2(-1540, 620)
nodes/fragment/6/node = SubResource("VisualShaderNodeStep_pr2lv")
nodes/fragment/6/position = Vector2(130.23, 516.22)
nodes/fragment/7/node = SubResource("VisualShaderNodeColorConstant_qjd8d")
nodes/fragment/7/position = Vector2(226.136, 51.1274)
nodes/fragment/connections = PackedInt32Array(3, 0, 4, 0, 5, 0, 4, 1, 4, 0, 6, 1, 6, 0, 0, 1, 7, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ko5cd"]
render_priority = 0
shader = SubResource("VisualShader_pduv4")

[sub_resource type="GDScript" id="GDScript_4sg0y"]
script/source = "extends Node

signal  _turn_page

"

[sub_resource type="BoxShape3D" id="BoxShape3D_224re"]
size = Vector3(2.69202, 0.224381, 2.26825)

[sub_resource type="GDScript" id="GDScript_dsb8m"]
script/source = "extends CollisionShape3D


@onready var col = $\".\"

func _ready():
	
	_global_datas.photo_fade_out.connect(active)	
	_global_datas.photo_fade_in.connect(disable)	
	
	
func active():
	col.disabled = true
	
func disable():
	col.disabled = false
"

[sub_resource type="GDScript" id="GDScript_66qc2"]
script/source = "extends Node

signal	_turn_page
"

[sub_resource type="BoxShape3D" id="BoxShape3D_aaupl"]
size = Vector3(2.69202, 0.259675, 2.27158)

[sub_resource type="GDScript" id="GDScript_q6dru"]
script/source = "extends CollisionShape3D


@onready var col = $\".\"

func _ready():
	
	_global_datas.photo_fade_out.connect(active)	
	_global_datas.photo_fade_in.connect(disable)	
	
	
func active():
	col.disabled = true
	
func disable():
	col.disabled = false
"

[sub_resource type="BoxShape3D" id="BoxShape3D_ru888"]
size = Vector3(0.424667, 0.230331, 1.83496)

[sub_resource type="BoxShape3D" id="BoxShape3D_khjkf"]
size = Vector3(0.424667, 0.312309, 1.83496)

[sub_resource type="QuadMesh" id="QuadMesh_l8pd8"]

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_gar6r"]
parameter_name = "Gradient"

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_65fpl"]
input_name = "uv"

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_weeqf"]
parameter_name = "ColorParameter"

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_b6xhj"]
constant = 0.4

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_uj4bl"]
constant = 0.389

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_tanwi"]
size = Vector2(724.789, 654.559)
expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_ofuf3"]

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_hnmu3"]
parameter_name = "Darker"

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_0vocs"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0.5, 0.5, 0.5)]
op_type = 3

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_japam"]
source = 5

[sub_resource type="VisualShader" id="VisualShader_03hmo"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded, shadows_disabled;

uniform vec4 ColorParameter : source_color;
uniform vec4 Darker : source_color;
uniform sampler2D Gradient;



void fragment() {
// ColorParameter:2
	vec4 n_out2p0 = ColorParameter;


// ColorParameter:7
	vec4 n_out7p0 = Darker;


// Input:11
	vec2 n_out11p0 = UV;


	vec4 n_out9p0;
// Texture2D:9
	n_out9p0 = texture(Gradient, n_out11p0);


// FloatConstant:4
	float n_out4p0 = 0.389000;


// FloatConstant:3
	float n_out3p0 = 0.400000;


	float n_out5p0;
// Expression:5
	n_out5p0 = 0.0;
	{
		const float DITHER_THRESHOLDS[16] ={
				1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
				13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
				4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
				16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
			};
			
		vec2 uv = FRAGCOORD.xy * n_out3p0;
		int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
		n_out5p0 = n_out4p0 - DITHER_THRESHOLDS[index];
	}


// Step:6
	float n_out6p0 = step(n_out9p0.x, n_out5p0);


// Mix:8
	vec3 n_out8p0 = mix(vec3(n_out2p0.xyz), vec3(n_out7p0.xyz), vec3(n_out6p0));


// Output:0
	ALBEDO = n_out8p0;


}
"
graph_offset = Vector2(-1035.9, 85.2084)
flags/unshaded = true
flags/shadows_disabled = true
nodes/fragment/0/position = Vector2(380, 240)
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_weeqf")
nodes/fragment/2/position = Vector2(-460, -20)
nodes/fragment/3/node = SubResource("VisualShaderNodeFloatConstant_b6xhj")
nodes/fragment/3/position = Vector2(-1600, 600)
nodes/fragment/4/node = SubResource("VisualShaderNodeFloatConstant_uj4bl")
nodes/fragment/4/position = Vector2(-1600, 420)
nodes/fragment/5/node = SubResource("VisualShaderNodeExpression_tanwi")
nodes/fragment/5/position = Vector2(-1200, 600)
nodes/fragment/5/size = Vector2(724.789, 654.559)
nodes/fragment/5/input_ports = "0,0,In;1,0,Size;"
nodes/fragment/5/output_ports = "0,0,Dither_Node;"
nodes/fragment/5/expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"
nodes/fragment/6/node = SubResource("VisualShaderNodeStep_ofuf3")
nodes/fragment/6/position = Vector2(-120, 320)
nodes/fragment/7/node = SubResource("VisualShaderNodeColorParameter_hnmu3")
nodes/fragment/7/position = Vector2(-840, 140)
nodes/fragment/8/node = SubResource("VisualShaderNodeMix_0vocs")
nodes/fragment/8/position = Vector2(-14.5749, 83.0822)
nodes/fragment/9/node = SubResource("VisualShaderNodeTexture_japam")
nodes/fragment/9/position = Vector2(-1060, 300)
nodes/fragment/10/node = SubResource("VisualShaderNodeTexture2DParameter_gar6r")
nodes/fragment/10/position = Vector2(-1660, 80)
nodes/fragment/11/node = SubResource("VisualShaderNodeInput_65fpl")
nodes/fragment/11/position = Vector2(-1300, 120)
nodes/fragment/connections = PackedInt32Array(3, 0, 5, 1, 4, 0, 5, 0, 5, 0, 6, 1, 2, 0, 8, 0, 7, 0, 8, 1, 10, 0, 9, 2, 9, 0, 6, 0, 6, 0, 8, 2, 8, 0, 0, 0, 11, 0, 9, 0)

[sub_resource type="Gradient" id="Gradient_1y543"]
offsets = PackedFloat32Array(0, 0.56917, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xxg5j"]
gradient = SubResource("Gradient_1y543")
fill_from = Vector2(0.5, 0.705)
fill_to = Vector2(0.5, 0.3)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ytwgf"]
render_priority = 0
shader = SubResource("VisualShader_03hmo")
shader_parameter/ColorParameter = Color(0.541176, 0.501961, 0.427451, 1)
shader_parameter/Darker = Color(0.364706, 0.337255, 0.286275, 1)
shader_parameter/Gradient = SubResource("GradientTexture2D_xxg5j")

[sub_resource type="BoxMesh" id="BoxMesh_1p7be"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_axuf0"]
shading_mode = 0
albedo_color = Color(0.541176, 0.501961, 0.427451, 1)

[sub_resource type="BoxMesh" id="BoxMesh_0xre3"]

[node name="Book" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_oj3kp")
_book_data = ExtResource("2_skv6l")

[node name="Open_Choice" type="Node" parent="."]
script = ExtResource("3_whbe4")

[node name="Idle_position" type="Node" parent="."]
script = ExtResource("3_1o6ej")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Multiple_page_transition_right" type="Timer" parent="."]
wait_time = 0.15

[node name="Multiple_page_transition_left" type="Timer" parent="."]
wait_time = 0.15

[node name="On_Over" type="MeshInstance3D" parent="."]
transform = Transform3D(1.32499, 5.0307e-17, 0.00345762, 3.98986e-17, 0.588891, 1.39591e-18, -0.0143616, 4.4245e-17, 0.319001, -0.114884, 0.0900068, -2.09456)
visible = false
layers = 512
mesh = SubResource("PlaneMesh_vkvy6")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_ko5cd")

[node name="On_Over2" type="MeshInstance3D" parent="."]
transform = Transform3D(1.32499, 1.7139e-11, 0.00345762, 1.87718e-11, 0.588891, 1.13654e-11, -0.0143616, 2.19594e-11, 0.319001, -0.115, 0.09, 2.002)
visible = false
layers = 512
mesh = SubResource("PlaneMesh_vkvy6")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_ko5cd")

[node name="Turn_Right" type="Area3D" parent="."]
transform = Transform3D(1, 2.91038e-11, -7.45058e-09, 1.45519e-11, 1, 3.54703e-11, -7.45058e-09, 3.72893e-11, 1, 0, 0, 0)

[node name="Turn_page" type="Node" parent="Turn_Right"]
script = SubResource("GDScript_4sg0y")

[node name="On_Over" type="Node" parent="Turn_Right" node_paths=PackedStringArray("_on_over")]
script = ExtResource("4_kuj33")
_on_over = NodePath("../../On_Over")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Turn_Right"]
transform = Transform3D(1, 0, 0, 0, 1, -5.27664e-19, 0, 1.48901e-18, 1, -0.0249052, 0.090931, -1.16268)
shape = SubResource("BoxShape3D_224re")
disabled = true
script = SubResource("GDScript_dsb8m")

[node name="Turn_Left" type="Area3D" parent="."]

[node name="Turn_page" type="Node" parent="Turn_Left"]
script = SubResource("GDScript_66qc2")

[node name="On_Over" type="Node" parent="Turn_Left" node_paths=PackedStringArray("_on_over")]
script = ExtResource("4_kuj33")
_on_over = NodePath("../../On_Over2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Turn_Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.113466, 0.0935526, 1.1877)
shape = SubResource("BoxShape3D_aaupl")
disabled = true
script = SubResource("GDScript_q6dru")

[node name="Button_list" type="Node3D" parent="."]

[node name="01" type="Area3D" parent="Button_list"]

[node name="push_button" type="Node" parent="Button_list/01"]
script = ExtResource("5_njsas")
button_data = ExtResource("5_dkdpb")

[node name="col" type="CollisionShape3D" parent="Button_list/01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.771647, 0.253045, 1.10079)
shape = SubResource("BoxShape3D_ru888")
disabled = true

[node name="02" type="Area3D" parent="Button_list"]

[node name="push_button" type="Node" parent="Button_list/02"]
script = ExtResource("5_njsas")
button_data = ExtResource("6_7arii")

[node name="col" type="CollisionShape3D" parent="Button_list/02"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.576051, 0.181542, -1.11046)
shape = SubResource("BoxShape3D_ru888")
disabled = true

[node name="03" type="Area3D" parent="Button_list"]

[node name="push_button" type="Node" parent="Button_list/03"]
script = ExtResource("5_njsas")
button_data = ExtResource("7_74geh")

[node name="col" type="CollisionShape3D" parent="Button_list/03"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443518, 0.181542, 1.09911)
shape = SubResource("BoxShape3D_ru888")
disabled = true

[node name="04" type="Area3D" parent="Button_list"]

[node name="push_button" type="Node" parent="Button_list/04"]
script = ExtResource("5_njsas")
button_data = ExtResource("7_7o884")

[node name="col" type="CollisionShape3D" parent="Button_list/04"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.792676, 0.222531, 1.1606)
shape = SubResource("BoxShape3D_khjkf")
disabled = true

[node name="Book_page" parent="." instance=ExtResource("5_0380u")]
transform = Transform3D(-1.93005e-08, 0, 0.441544, 0, 0.441544, 0, -0.441544, 0, -1.93005e-08, -0.116, -0.061, 0)

[node name="Page_flip_right_ROOT" type="Node3D" parent="."]
transform = Transform3D(0.975, 0, 0, 0, 1, 0, 0, 0, 0.922, -0.048, 0.089, 0)

[node name="Page_flip_right" parent="Page_flip_right_ROOT" instance=ExtResource("6_ignqh")]

[node name="Page_flip_left_ROOT" type="Node3D" parent="."]
transform = Transform3D(0.974894, 8.74227e-08, 0, -8.52279e-08, 0.999999, 0, 0, 0, -0.949854, -0.048, 0.089, 0)

[node name="Page_flip_left" parent="Page_flip_left_ROOT" instance=ExtResource("6_ignqh")]

[node name="page" type="MeshInstance3D" parent="."]
transform = Transform3D(2.65385, 1.96518e-07, 2.20912e-07, -1.16003e-07, -1.96518e-07, 5.05387, 1.16003e-07, -4.49581, -2.20912e-07, -0.103871, 0.0909873, -0.0437125)
layers = 512
cast_shadow = 0
mesh = SubResource("QuadMesh_l8pd8")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_ytwgf")

[node name="book_page" type="MeshInstance3D" parent="."]
transform = Transform3D(2.67039, 0, 1.84741e-13, 0, 0.078953, 0, 0, 0, 4.63623, -0.104716, 0.0503313, -0.0783752)
layers = 512
mesh = SubResource("BoxMesh_1p7be")
surface_material_override/0 = SubResource("StandardMaterial3D_axuf0")

[node name="book_base" type="MeshInstance3D" parent="."]
transform = Transform3D(0.00116803, 0, -2.80743, 0, 0.0406598, 0, 4.79073, 0, 0.000685451, -0.106676, 0.00743847, -0.0563836)
layers = 512
mesh = SubResource("BoxMesh_0xre3")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("7_n6d7t")

[node name="signet_shortcut" parent="." instance=ExtResource("8_n2vim")]
transform = Transform3D(15.3259, 1.84774e-06, -4.76837e-07, -1.19209e-07, 15.3258, -5.51343e-07, 1.19209e-06, 1.63913e-07, 15.3259, -1.56141, 0.0536942, 1.83738)

[node name="Anwser_panel_choice_root" parent="." instance=ExtResource("5_ryh6q")]
transform = Transform3D(0.978162, 0, -0.207843, 0, 1, 0, 0.207843, 0, 0.978162, 0.343302, 0.307948, -0.879038)
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Multiple_page_transition_right" to="." method="_on_multiple_page_transition_timeout"]
[connection signal="timeout" from="Multiple_page_transition_left" to="." method="_on_multiple_page_transition_left_timeout"]
[connection signal="_turn_page" from="Turn_Right/Turn_page" to="." method="_turn_page_right"]
[connection signal="_turn_page" from="Turn_Left/Turn_page" to="." method="turn_page_left"]
